--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Guanlin Li's Homepage"
 title_separator          : "-"
 name                     : &name "Guanlin Li"
-description              : &description "A Dota player"
+description              : &description "A Dota2 player"
 url                      : 'https://guanlinlee.github.io' # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "GuanlinLee/guanlinlee.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
