--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Guanlin Li's Homepage"
 title_separator          : "-"
 name                     : &name "Guanlin Li"
-description              : &description "A Dota2 player"
+description              : &description "Ph.D. candidate at Nanyang Technological University"
 url                      : 'https://guanlinlee.github.io' # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GuanlinLee/guanlinlee.github.io"
